bindings/go/irgx.h


uint32_t irgx_abi_version(void);
const char *irgx_version(void);
const char *irgx_pcre2_version(void);
#define IRGX_MATCH 1
#define IRGX_STALE (-1)
#define IRGX_OOM (-2)
#define IRGX_INVALID (-4)
const char *irgx_status_message(int32_t code);
typedef struct {
  uint32_t struct_size;
  int32_t status;   
  int32_t at_space; 
  const char *name;      
  const uint8_t *path;   
  size_t path_len;
  uint64_t at; 
} irgx_fault;
int32_t irgx_last_fault(irgx_fault *out);
typedef struct {
  const uint8_t *ptr;
  size_t len;
} irgx_text;
typedef struct irgx_regex irgx_regex;
typedef struct {
  int64_t start;
  int64_t end;
} irgx_span;
int32_t irgx_compile(const uint8_t *pattern, size_t len, uint32_t flags,
                        irgx_regex **out);
void irgx_free(irgx_regex *re);
int32_t irgx_is_match(irgx_regex *re, const uint8_t *text, size_t len);
int32_t irgx_find_all(irgx_regex *re, const uint8_t *text, size_t len,
                         irgx_span *out, size_t cap, size_t *written);
int32_t irgx_pattern_windows(irgx_regex *re);
int32_t irgx_pattern_earliest(irgx_regex *re);
int32_t irgx_is_match_in(irgx_regex *re, const uint8_t *text, size_t len,
                         size_t from, size_t to);
int32_t irgx_find_all_in(irgx_regex *re, const uint8_t *text, size_t len,
                         size_t from, size_t to, irgx_span *out, size_t cap,
                         size_t *written);
int32_t irgx_find_first_in(irgx_regex *re, const uint8_t *text, size_t len,
                           size_t from, size_t to, irgx_span *out);
int32_t irgx_captures(irgx_regex *re, const uint8_t *text, size_t len,
                         size_t from, irgx_span *out, size_t cap,
                         size_t *written);
typedef struct irgx_slate irgx_slate;
typedef struct {
  const uint8_t *pattern;
  size_t len;
  uint32_t flags;
} irgx_slate_pattern;
int32_t irgx_slate_compile(const irgx_slate_pattern *patterns, size_t count,
                           size_t *refused, irgx_slate **out);
void irgx_slate_free(irgx_slate *slate);
size_t irgx_slate_len(const irgx_slate *slate);
int32_t irgx_slate_is_match(irgx_slate *slate, const uint8_t *text, size_t len);
int32_t irgx_slate_which(irgx_slate *slate, const uint8_t *text, size_t len,
                         uint32_t *out, size_t cap, size_t *written);
typedef struct {
  const uint8_t *pattern;
  size_t len;
} irgx_munch_pattern;
typedef struct {
  uint32_t pattern;
  uint32_t why;
} irgx_munch_refusal;
#define IRGX_MUNCH_SYNTAX 0u        
#define IRGX_MUNCH_STATES 1u        
#define IRGX_MUNCH_WORD_CONTEXT 2u  
#define IRGX_MUNCH_BUFFER_ANCHOR 3u 
typedef struct {
  size_t len;
  size_t count;
} irgx_munch_token;
#define IRGX_MUNCH_LONGEST 0u  
#define IRGX_MUNCH_SHORTEST 1u 